--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -96,6 +96,8 @@ Concepts:
     section:
     - title: Adding New Functionality
       path: /concepts/enhancements/new-application-features.html
+    - title: Enhancing the User Interface
+      path: /manuals/enhancements/enhancing-ui/enhancing-ui.html
     - title: Base Dev Tools
       path: /concepts/enhancements/dev-tools.html
   - sectiontitle: Legacy Application Background
@@ -295,8 +297,10 @@ Manuals:
     - title: Database Names
       path: /manuals/configuration/database-names.html
     - sectiontitle: Expo Website Configuration
-      sectionpath: /manuals/configuration/expo-website.html
+      sectionpath: /manuals/configuration/configure-expo-website.html
       section:
+      - title: Enabling Multiple Jobs per Browser
+        path: /manuals/configuration/multiple-jobs-one-browser.html
       - title: Expo Client-Side Content
         path: /manuals/configuration/expo-client-side-library.html
       - title: Using Fake Data
@@ -304,6 +308,7 @@ Manuals:
   - sectiontitle: Enhancing your Migrated Application
     section:
     - sectiontitle: Enhancing the User Interface
+      sectionpath: /manuals/enhancements/enhancing-ui/enhancing-ui.html
       section:
       - title: Adding View Elements to Display File Page
         path: /manuals/enhancements/enhancing-ui/adding-view-elements.html
@@ -2466,6 +2471,8 @@ Reference:
       path: /reference/asna-qsys-expo/expo-model/i-display-file.html
     - title: IMonaServerConfig
       path: /reference/asna-qsys-expo/expo-model/i-mona-server-config.html
+    - title: JobSession
+      path: /reference/asna-qsys-expo/expo-model/job-session.html
     - title: ModulusValidation
       path: /reference/asna-qsys-expo/expo-model/modulus-validation.html
     - title: MonaServerConfig
